--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@
 Source: golang
 Section: devel
 Priority: optional
-Maintainer: Go Compiler Team <pkg-golang-devel@lists.alioth.debian.org>
+Maintainer: Scibian Project <packaging@scibian.org>
 Uploaders: Michael Stapelberg <stapelberg@debian.org>,
            Paul Tagliamonte <paultag@debian.org>,
            Tianon Gravi <tianon@debian.org>
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-golang/golang.git
-Vcs-Git: git://anonscm.debian.org/pkg-golang/golang.git
+Vcs-Browser: https://github.com/scibian/golang
+Vcs-Git: https://github.com/scibian/golang.git
 Build-Depends: bison, debhelper (>= 8.9.7), ed, mawk | awk, netbase, perl
 Standards-Version: 3.9.6
 Homepage: https://golang.org
