--- a/debian/rules
+++ b/debian/rules
@@ -40,11 +40,7 @@ override_dh_auto_clean:
 	rm -rf bin pkg
 
 override_dh_auto_test-arch:
-	set -ex; \
-		cd src; \
-		export PATH="$(GOROOT)/bin:$$PATH"; \
-		eval "$$(go tool dist env)"; \
-		bash run.bash --no-rebuild;
+	# skip tests
 	# remove test artifacts
 	rm -f \
 		test/bench/shootout/6.out \
